data/derived/comb/progs/unify/prog3437.ml.out
Characters 90-91:
  | Sine s -> "sin(pi*" ^ s ^ ")";;
                          ^
Error: This expression has type expr but an expression was expected of type
         string
